src/objects/ScoreValue__c.object
<CustomObject>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipLabel>Score Values</relationshipLabel>
        <relationshipName>Score_Values</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RemoteId__c</fullName>
        <description>The Id of Score Value as it is in the org that the score value was downloaded from</description>
        <externalId>true</externalId>
        <label>Remote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoringGroup__c</fullName>
        <label>Scoring Group</label>
        <referenceTo>ScoringGroup__c</referenceTo>
        <relationshipLabel>Score Values</relationshipLabel>
        <relationshipName>Score_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SurveyLibrary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Survey Library that the Score Value was downloaded from</description>
        <label>Remote Library</label>
        <referenceTo>SurveyLibrary__c</referenceTo>
        <relationshipLabel>Score Value</relationshipLabel>
        <relationshipName>Scoring_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Score Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Score Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>